feat: implement HP logic, takeDamage with Math.max and isBloodied rule with comprehensive tests, refact abilityScores and Creature for better readability